test: add unit tests, integration tests and test resources